# OpenCV

./: .gitignore  CMakeLists.txt
src/: Blend.cpp  BrightnessContrast.cpp  DisplayImage.cpp  MSM.cpp  MaskOperation.cpp  ScanImage.cpp  StateMachineEx.cpp  barcode-QRcodeScanner.cpp  warpTriangle.cpp
